--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -59,13 +59,38 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 />
 
+            <TextView
+                android:id="@+id/no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No."
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/pretendard_bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="23dp"/>
+            <TextView
+                android:id="@+id/numbering_detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/pretendard_bold"
+                app:layout_constraintStart_toEndOf="@id/no"
+                app:layout_constraintTop_toTopOf="@id/no"
+                app:layout_constraintBottom_toBottomOf="@id/no"/>
+
             <ImageView
                 android:id="@+id/line1"
                 android:layout_width="30dp"
                 android:layout_height="2.5dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="40dp"
                 android:background="@color/colorPrimaryNormal"
                 app:layout_constraintEnd_toEndOf="parent"
+
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/book_bg_iv"
@@ -143,8 +168,8 @@
 
             <ImageView
                 android:id="@+id/ic_pencle"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="33dp"
+                android:layout_height="33dp"
                 android:src="@drawable/ic_pencil"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/book_bg_iv"
@@ -152,8 +177,8 @@
                 android:layout_marginEnd="5dp"/>
             <ImageView
                 android:id="@+id/ic_mark"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
                 android:src="@drawable/ic_mark"
                 app:layout_constraintTop_toBottomOf="@+id/book_bg_iv"
                 android:layout_marginTop="12dp"
@@ -178,7 +203,7 @@
             <!-- 태그 리스트 -->
             <com.google.android.flexbox.FlexboxLayout
                 android:id="@+id/book_tags"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
