--- a/app/src/main/res/layout/activity_review_book.xml
+++ b/app/src/main/res/layout/activity_review_book.xml
@@ -106,7 +106,7 @@
         android:text="완료"
         android:textColor="#FFFFFF"
         android:textSize="20dp"
-        android:background="#2E2F33"
+        android:backgroundTint="@color/white_10"
         app:layout_constraintTop_toBottomOf="@id/rating_text"
         app:layout_constraintStart_toStartOf="@id/rating_text"
         app:layout_constraintEnd_toEndOf="@id/rating_text"
