--- a/app/src/main/res/layout/activity_review_space.xml
+++ b/app/src/main/res/layout/activity_review_space.xml
@@ -46,8 +46,8 @@
     <!-- 공간 이미지 -->
     <ImageView
         android:id="@+id/place_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_height="200dp"
         android:layout_marginTop="80dp"
         android:scaleType="fitCenter"
         android:src="@drawable/image_place"
@@ -107,7 +107,8 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:background="@color/gray_01"
+        android:backgroundTint="@color/white_10"
+
         android:enabled="false"
         android:text="완료"
         android:textColor="#FFFFFF"
