--- a/app/src/main/res/layout/item__review_book.xml
+++ b/app/src/main/res/layout/item__review_book.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="90dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
@@ -84,7 +84,7 @@
             android:theme="@style/Base.Widget.AppCompat.RatingBar"
             app:layout_constraintBottom_toBottomOf="parent"
 
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
 
             app:layout_constraintEnd_toEndOf="@+id/item_book"/>
 
