--- a/app/src/main/res/layout/item_review_place.xml
+++ b/app/src/main/res/layout/item_review_place.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item_book"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:padding="12dp"
         android:background="#1B1C1E">
 
@@ -91,7 +91,7 @@
             android:rating="3.5"
             android:stepSize="0.5"
             android:theme="@style/Base.Widget.AppCompat.RatingBar"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="48dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
