--- a/app/src/main/res/layout/item_home_book.xml
+++ b/app/src/main/res/layout/item_home_book.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:id="@+id/book_cover"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/img_book_cover1"
         app:layout_constraintTop_toTopOf="parent"
