--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,6 +48,7 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white_20"
         android:textSize="16sp"
+        android:textStyle="normal"
         app:layout_constraintBottom_toTopOf="@+id/pw_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.591"
@@ -103,7 +104,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="4dp"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
@@ -116,7 +117,7 @@
             android:id="@+id/login_checkbox_1"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="18dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/btn_checkbox_background"
             android:button="@null"
@@ -128,12 +129,13 @@
         android:id="@+id/autologin"
         android:layout_width="70dp"
         android:layout_height="24dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="9dp"
         android:layout_marginBottom="19dp"
         android:text="자동 로그인"
         android:textColor="@color/white_50"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
-        app:layout_constraintStart_toEndOf="@+id/login_checkbox"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pw_input"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -142,9 +144,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="9dp"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="50dp"
         android:text="이메일 찾기"
         android:textColor="@color/white_50"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
@@ -158,8 +160,8 @@
         android:id="@+id/and"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="50dp"
         android:text="|"
         android:textColor="@color/white_50"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
@@ -172,9 +174,9 @@
         android:layout_width="81dp"
         android:layout_height="23dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="6dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="19dp"
+        android:layout_marginBottom="46dp"
         android:text="비밀번호 찾기"
         android:textColor="@color/white_50"
         app:layout_constraintBottom_toTopOf="@+id/login_button"
@@ -200,11 +202,12 @@
         android:id="@+id/first_login_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="85dp"
         android:layout_marginTop="12dp"
-        android:fontFamily="@font/pretendard_bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:text="Ttt.가 처음이신가요?"
         android:textColor="@color/white"
+        android:textSize="13dp"
         app:layout_constraintEnd_toStartOf="@+id/signupButton"
         app:layout_constraintHorizontal_bias="0.83"
         app:layout_constraintStart_toStartOf="parent"
@@ -215,7 +218,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="110dp"
         android:layout_marginBottom="55dp"
         android:fontFamily="@font/pretendard_medium"
         android:text="가입하기"
@@ -235,6 +238,7 @@
         app:layout_constraintBottom_toTopOf="@+id/google_login_button"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_gravity="center"
+        android:textColor="@color/white_50"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/first_login_label"
