--- a/app/src/main/res/layout/activity_preference.xml
+++ b/app/src/main/res/layout/activity_preference.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="16dp"
-        android:fontFamily="@font/pretendard_bold"
+        android:fontFamily="@font/pretendard_semibold"
         android:lineSpacingExtra="4dp"
         android:text="책으로 얻고 싶은\n경험을 골라보세요!"
         android:textColor="@color/white"
@@ -74,6 +74,7 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp"
                 android:text="전문적인 지식 쌓기"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
 
@@ -86,6 +87,8 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp"
                 android:text="힐링하기"
+
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
 
@@ -98,6 +101,7 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp"
                 android:text="허구 속 현실 찾기"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp" />
         </LinearLayout>
@@ -118,6 +122,7 @@
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/btn_option_background"
                 android:text="바이블 독서 정독"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 android:layout_margin="4dp"/>
@@ -130,6 +135,7 @@
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/btn_option_background"
                 android:text="도파민 충전"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 android:layout_margin="4dp"/>
@@ -142,6 +148,7 @@
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/btn_option_background"
                 android:text="좋은 문장 찾기"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 android:layout_margin="4dp"/>
@@ -162,6 +169,7 @@
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/btn_option_background"
                 android:text="삶 속 인사이트 발견"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 android:layout_margin="4dp"/>
@@ -174,6 +182,7 @@
                 android:paddingHorizontal="16dp"
                 android:background="@drawable/btn_option_background"
                 android:text="바다 너머 새로운 이야기"
+                android:fontFamily="@font/pretendard_regular"
                 android:textColor="@color/white"
                 android:textSize="13sp"
                 android:layout_margin="4dp"/>
